# saas-boilerplate

./: .env.example  .gitignore  Justfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: cli.py  main.py
app/common/: __init__.py  models.py  repositories.py  services.py
app/common/admin/: __init__.py  router.py
app/common/auth/: __init__.py  default_roles.py  dependencies.py  models.py  permissions.py  rbac_sync.py  registry.py  repositories.py  router.py  schemas.py  security.py
app/content/: landing.yaml  navigation.yaml  pricing.yaml  site.yaml
app/core/: config.py  content.py  database.py  exceptions.py  logging.py  middleware.py  templates.py
app/models/: __init__.py  task.py
app/modules/: __init__.py
app/modules/task/: __init__.py  models.py  permissions.py  repositories.py  router.py
app/repositories/: __init__.py  base.py  task.py
app/routers/web/: home.py  tasks.py
app/services/: base.py
app/static/css/: main.css
app/templates/: base.html
app/templates/components/: checkbox.html  counter.html  dropdown.html  macros.html  modal.html
docs/: multi-tenancy.md  stimulus-components.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: main.js
migrations/: env.py
migrations/versions/: 2245c3811a6e_add_rbac_tables.py  27f0d6d11564_add_tenant_scope_to_rbac_with_rls.py  75140725d528_create_tasks_table.py  e1a3bd478b01_add_users_and_refresh_tokens.py
tests/: conftest.py  test_auth_endpoints.py  test_auth_models.py  test_health.py
tests/core/: test_content.py
(+44 files in other folders)
